# mah

./: ;!pmd test  README.md  pyproject.toml
src/mah/: cli.py
src/mah/db/: utils.py
tests/: test_cli.py  test_db.py
