[project]
name = "mah"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "dMario24", email = "data.mario24@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]

[project.scripts]
my-history = 'mah.cli:cmd'

[project.urls]
Homepage = "https://github.com/dMario24/mah/issues"
Issues = "https://github.com/dMario24/mah/issues"
